Bug#32178 server crash when select from i_s and concurrent partition management The crash happens because we change share->partition_info where 'share' is global struct (it affects other threads which use the same 'share'). It causes discrepancy between 'share' and handler data. The fix: Move share->partition_info update into WFRM_INSTALL_SHADOW part which is protected by OPEN_lock.

sql/sql_partition.cc:
  fast_end_partition: added close_thread_tables() for the case when error occures
  fast_alter_partition_table: added close_thread_tables() for the case when error occures
sql/sql_table.cc:
  The crash happens because we change share->partition_info where 'share' is global struct.
  It causes discrepancy between 'share' and handler data.
  The fix:
  Move share->partition_info update into WFRM_INSTALL_SHADOW part which is protected by OPEN_lock.